Dialog modal info

--- a/src/index.css
+++ b/src/index.css
@@ -364,3 +364,39 @@ nav a {
     font-size: 16px;
   }
 }
+
+/*-----------------------------------------------------------------*/
+/* dialog styles */
+
+.dsc-dialog-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgb(0, 0, 0, 0.5);
+}
+
+.dsc-dialog-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  background-color: var(--dsc-color-card-bg);
+  padding: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.dsc-dialog-box h2 {
+  font-size: 20;
+  color: var(--dsc-color-font-primary);
+  margin-bottom: 20px;
+}
+
+.dsc-dialog-ttn-container {
+  width: 100%;
+}
