Confirmation dialog modal

--- a/src/index.css
+++ b/src/index.css
@@ -397,6 +397,9 @@ nav a {
   margin-bottom: 20px;
 }
 
-.dsc-dialog-ttn-container {
+.dsc-dialog-btn-container {
   width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
 }
